# kes-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
benches/: parse.rs
examples/: dump.rs  fib.kes  fib.rs  format.rs  io.kes  io.rs  simple.rs
kesfmt/: Cargo.toml
kesfmt/src/: main.rs
lsp/: Cargo.toml
lsp/src/: lib.rs  main.rs
lsp/tests/: simple.rs
src/: .parser.rs.rustfmt  ast.rs  builtin.rs  compiler.rs  console.rs  context.rs  error.rs  formatter.rs  grammar.lalrpop  instruction.rs  interner.rs  lexer.rs  lib.rs  location.rs  operator.rs  parser.rs  printer.rs  program.rs  token.rs  value.rs
