[package]
name = "kes"
version = "0.16.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"
description = "Korean Era Script"
license = "MIT"
documentation = "https://docs.rs/kes"
homepage = "https://github.com/Riey/kes-rs"
repository = "https://github.com/Riey/kes-rs"
readme = "README.md"

[features]
unstable = []

[profile.release]
debug = true

[dependencies]
memchr = "2.3.4"
bumpalo = { version = "3.4.0", features = ["collections"] }
ahash = "0.6.1"
thiserror = "1.0.22"
arrayvec = "0.5.2"

[dev-dependencies]
pretty_assertions = "0.6.1"
