[workspace]
members = [
    ".",
    "kesfmt",
]

[package]
name = "kes"
version = "0.16.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"
description = "Korean Era Script"
license = "MIT"
documentation = "https://docs.rs/kes"
homepage = "https://github.com/Riey/kes-rs"
repository = "https://github.com/Riey/kes-rs"
readme = "README.md"

[profile.release]
debug = true

[dependencies]
memchr = "2.3.4"
ahash = "0.6.1"
thiserror = "1.0.22"
async-trait = "0.1.42"
arrayvec = "0.5.2"
static_assertions = "1.1.0"
lalrpop-util = "0.19.1"
string-interner = "0.12.1"
serde = { version = "1.0.118", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "0.6.1"
futures-executor = "0.3.8"
serde_json = "1.0.60"
bincode = "1.3.1"

[build-dependencies]
lalrpop = "0.19.1"
