[package]
name = "kes-lsp"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-server = "0.5.0"
lsp-types = "0.84.0"
serde_json = "1.0.59"

[dependencies.kes]
path = ".."
